# ledgerly

./: .readthedocs.yaml  README.rst  pyproject.toml
.github/workflows/: pr-build-docs.yaml  pr-lint-code.yaml  pr-lint-commits.yaml  pr-test-all.yaml
docs/: cli.rst  conf.py  index.rst
ledgerly/cli/: main.py
tasks/: __init__.py  code.py  commits.py  documentation.py  tests.py
tests/cli/: test_cli.py
